--- a/NonSupervisioned/SOM/SOMNetwork.ipynb
+++ b/NonSupervisioned/SOM/SOMNetwork.ipynb
@@ -175,7 +175,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 3,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -215,7 +215,7 @@
         "plt.imshow(som.get_weights(), interpolation='none')\n",
         "\n",
         "plt.tight_layout()\n",
-        "plt.show()"
+        "plt.show()\n"
       ]
     },
     {
